---
title: Entity-Relationship Diagram — Core Lending and Governance (20 entities)
---
erDiagram
    WORLD_BANK ||--o{ NATIONAL_BANK : registers
    NATIONAL_BANK ||--o{ LOCAL_BANK : registers
    LOCAL_BANK ||--o{ BANK_USER : employs
    LOCAL_BANK ||--o{ BORROWER : onboards
    BORROWER ||--o{ LOAN_REQUEST : submits
    BANK_USER ||--o{ LOAN_REQUEST : approves
    LOAN_REQUEST ||--|| LOAN : produces
    LOAN ||--o{ INSTALLMENT : schedules
    INSTALLMENT ||--o| TRANSACTION : settled_by
    BORROWER ||--o{ INCOME_PROOF : provides
    BORROWER ||--o{ CHAT_MESSAGE : sends
    LOAN ||--o{ AI_ML_LOG : scored_by
    BORROWER ||--o| CREDIT_PASSPORT : holds
    BORROWER ||--o{ SESSIONS : has
    CHAT_MESSAGE ||--o| AGENT_ACTION_LOG : confirms
    LOCAL_BANK ||--o{ INTEREST_RATE_TIER : sets
    BORROWER ||--o{ ASSETS : declares

    WORLD_BANK {
        bigint world_bank_id PK
        string name
        string admin_wallet
        numeric total_reserve
    }
    NATIONAL_BANK {
        bigint national_bank_id PK
        bigint world_bank_id FK
        string name
        numeric reserve_ratio
    }
    LOCAL_BANK {
        bigint local_bank_id PK
        bigint national_bank_id FK
        string name
        numeric reserve_ratio
    }
    BANK_USER {
        bigint user_id PK
        bigint local_bank_id FK
        string role
        string wallet
    }
    BORROWER {
        bigint borrower_id PK
        bigint local_bank_id FK
        string wallet
        int kyc_level
        int tier
    }
    LOAN_REQUEST {
        bigint request_id PK
        bigint borrower_id FK
        numeric amount_usdc
        string status
    }
    LOAN {
        bigint loan_id PK
        bigint request_id FK
        numeric principal_usdc
        numeric apr_bps
        string status
    }
    INSTALLMENT {
        bigint installment_id PK
        bigint loan_id FK
        numeric amount_due
        date due_date
    }
    TRANSACTION {
        bigint tx_id PK
        bigint installment_id FK
        string tx_hash
    }
    INCOME_PROOF {
        bigint proof_id PK
        bigint borrower_id FK
        string doc_hash
    }
    CHAT_MESSAGE {
        bigint msg_id PK
        bigint borrower_id FK
        bigint session_id FK
        text body
    }
    AI_ML_LOG {
        bigint log_id PK
        bigint loan_id FK
        numeric score
        json shap
    }
    CREDIT_PASSPORT {
        bigint passport_id PK
        bigint borrower_id FK
        int credit_score
        int risk_tier
    }
    SESSIONS {
        bigint session_id PK
        bigint borrower_id FK
        string parent_session_id
        json context_snapshot
    }
    AGENT_ACTION_LOG {
        bigint action_id PK
        bigint msg_id FK
        string tool_name
        string confirmation_turn_id
        string tx_hash
    }
    INTEREST_RATE_TIER {
        bigint tier_id PK
        bigint local_bank_id FK
        numeric utilization_kink
        numeric rate_bps
    }
    ASSETS {
        bigint asset_id PK
        bigint borrower_id FK
        string asset_type
        numeric value_usdc
    }
